[package]
name = "cargo-v5"
version = "0.1.0"
edition = "2021"
description = "Cargo utility for interacting with the vex v5 brain."
license-file = "LICENSE"
homepage = "https://github.com/Culpeper-Robotics/cargo-v5"
repository = "https://github.com/Culpeper-Robotics/cargo-v5"
readme = "README.md"
categories = ["science::robotics", "command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
keywords = ["vex", "v5", "robotics", "cargo", "VRC"]

[dependencies]
anyhow = "1.0"
ascii = "1.0.0"
ceros-serial = { git = "ssh://git@github.com/ceros-os/ceros-serial", features = ["use_std"] }
chrono = "0.4"
clap = { version = "3.1.9", features = ["derive"] }
console = "0.15.0"
cobs = { git = "ssh://git@github.com/Culpeper-Robotics/cobs-rs.git" }
crc = "2.1.0"
dialoguer = "0.10.0"
indicatif = "0.16.2"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serialport = "4.1.0"
toml = "0.5.8"
vexv5_serial = { git = "ssh://git@github.com/ceros-os/vexv5_serial.git" }
