[package]
name = "cargo-v5"
version = "0.1.0"
edition = "2021"
description = "Cargo utility for interacting with the vex v5 brain."
license-file = "LICENSE"
homepage = "https://github.com/vexrs/cargo-v5"
repository = "https://github.com/vexrs/cargo-v5"
readme = "README.md"
categories = ["science::robotics", "command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
keywords = ["vex", "v5", "robotics", "cargo", "VRC"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.26", features = ["derive"] }
console = "0.15.0"
dialoguer = "0.10.0"
vexv5_serial = { git = "ssh://git@github.com/vexrs/vexv5_serial.git", branch = "redux" }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
